--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,6 +12,8 @@
     "eslint": "eslint . --fix"
   },
   "dependencies": {
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -24,7 +26,6 @@
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "prettier": "^3.5.3",
