--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,10 +12,12 @@
     "eslint": "eslint . --fix"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react-hooks": "^5.2.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
